--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
         "thujohn/twitter": "~2.0",
-        "zizaco/entrust": "dev-laravel-5"
+        "zizaco/entrust": "dev-laravel-5",
+        "illuminate/html":"~5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
