--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "thujohn/twitter": "~2.0",
         "zizaco/entrust": "dev-laravel-5",
         "guzzlehttp/guzzle": "~4.0",
-        "illuminate/html":"~5.0"
+        "illuminate/html":"~5.0",
+		"intervention/image": "^2.3"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
