--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
 	"require": {
 		"laravel/framework": "5.0.*",
         "thujohn/twitter": "~2.0",
-        "zizaco/entrust": "dev-laravel-5",
+        "zizaco/entrust": "1.4.1",
         "guzzlehttp/guzzle": "~4.0",
         "illuminate/html":"~5.0",
-		"intervention/image": "^2.3"
+		"intervention/image": "^2.3",
+        "barryvdh/laravel-dompdf": "0.6.*"
+
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
